--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -49,7 +49,7 @@ services:
       - "8088:80"  # Mudando para 8088 para evitar conflito
     volumes:
       - ./index.html:/usr/share/nginx/html/index.html
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - backend
 
