--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -12,7 +12,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
       - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
-      - "5433:5432"  # Mudando para 5433 para evitar conflito
+      - "5435:5432"  # Porta padrão do sistema
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U softwarehub_user -d softwarehub"]
       interval: 30s
