--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -8,7 +8,6 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD:-SoftwareHub@2024Secure}
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5435:5432"
     healthcheck:
@@ -40,17 +39,7 @@ services:
       - ./uploads:/app/uploads
     networks:
       - app-network
-    command: >
-      sh -c "
-        echo 'Aguardando banco de dados...' &&
-        sleep 5 &&
-        echo 'Gerando Prisma Client...' &&
-        npx prisma generate &&
-        echo 'Aplicando migrações...' &&
-        npx prisma migrate deploy &&
-        echo 'Iniciando servidor...' &&
-        node dist/server.js
-      "
+    command: ["sh", "/app/scripts/init-database.sh"]
 
   frontend:
     build: 
