iajuste de rebuild

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,8 +17,7 @@ RUN mkdir -p scripts
 COPY scripts/ ./scripts/
 RUN chmod +x scripts/*.sh || true
 
-# Create VERSION file (will be overridden by build script)
-RUN echo "1.0.0" > VERSION
+# VERSION file will be copied from build context
 
 # Generate Prisma Client
 RUN npx prisma generate
